--- a/proposal.qmd
+++ b/proposal.qmd
@@ -5,7 +5,7 @@ author:
   - name: "Isabel Howe"
     affiliations:
       - name: "College of Information Science, University of Arizona"
-description: "|
+description: |
     For starters, my goal to create an interactive dashboard is due to the utility I see in creating such a dashboard in my current career.
       Creating an interactive dashboard is something I have never pushed myself to do, and so, while I may regret the extra work, I find
     it'll be a task with high future reward. I also think that an interactive dashboard is a favorable way to get the viewers interested
@@ -23,7 +23,6 @@ description: "|
       As a mother who also works full time, I am concerned that I am trying to bite off more than I can handle by creating an interactive
       dataset with little prior experience doing so. My plan of attack is to dedicate minimum an hour daily to the project. Whether
       that's during work break or during the girl's athletic practices, prioritizing this project will be a great personal reward.
-      "
 format:
   html:
     code-tools: true
