--- a/proposal.qmd
+++ b/proposal.qmd
@@ -86,7 +86,8 @@ Quesiton #2: Does Cartel presence lead to a strong increase of crimes in the are
 ## Analysis plan
 
 - I plan to answer question 1 by creating a new vector that sums up the columns per region in Mexico. This will create a new vector displaying crimes per region. 
-I can then compare the magnitude of crime rates per region. 
+I can then compare the magnitude of crime rates per region. I plan to create a  GeoDataFrame utilizing pandas that highlights the regions based on highest to 
+lowest crime. This will create a nice visual of the crime distribution throughout the coutry.  
 
 - I plan to answer question 2 by comparing the vector created above, crime per regions in Mexico, with cartel presence in such regions. I plan to create an interactive scatter plot 
 to display any possible correlation. 
